# MindVault

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  embedding_registry.json  eslint.config.js  index.html  old_README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  security.yml
.jules/: bolt.md  sentinel.md
core/: .gitignore  Cargo.toml  deny.toml  tauri.conf.json
core/resources/onnxruntime/: .gitignore  README.md
core/src/: auth.rs  chat.rs  ipc_types.rs  lib.rs  onboarding.rs  priority.rs  privacy.rs  redacted.rs
core/src/embed/: bundled.rs  config.rs  job.rs  mod.rs  ollama.rs  registry.rs  search.rs  storage.rs
core/src/llm/: assembler.rs  client.rs
core/src/memory_agent/: amendment.rs  changeset.rs  commit.rs  correction.rs  mod.rs  persistence.rs  similarity.rs  trigger.rs
core/tests/: changeset_commit.rs  correction_amendment.rs  integration_tests.rs  memory_agent.rs  migration_integrity.rs  onboarding_commit.rs
core/tests/integration_tests/: correction_amendment.rs  embedding.rs  memory_agent.rs  migration_integrity.rs  mod.rs  onboarding_commit.rs  onboarding_default_vaults.rs  ui_metadata_migration.rs
db/migrations/: 0001_schema_v1.sql  0002_priority_urp_fields.sql  0003_onboarding_default_vaults.sql  0004_vault_ui_metadata.sql  0005_redacted_encryption.sql  (+2 more)
scripts/: preflight.mjs  stage-onnxruntime.ps1  test-frontend.ts  test-privacy.ts
ui/: App.css  App.tsx  ipc.ts  main.tsx
ui/style/: App.css  (+2 more)
(+69 files in other folders)
