[package]
name = "mindvault"
version = "0.1.0"
description = "Personalized AI Memory Architecture"
authors = ["Aashish"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mindvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", default-features = false, features = ["wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled", "backup"] }
ts-rs = "11"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
tiktoken-rs = "0.5"
rfd = "0.15"
governor = "0.6"
